Add activity book list title and add padding to start

--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.book.gridList.BookListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:padding="20dp"
         android:id="@+id/rv_list_book"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
