--- a/app/src/main/res/layout/fragment_book_list.xml
+++ b/app/src/main/res/layout/fragment_book_list.xml
@@ -6,209 +6,230 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.ui.bookList.BookListFragment">
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swl_refresh_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        >
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="60dp">
+            android:layout_height="wrap_content">
 
-
-            <GridLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/label_status_planning_to_read"
+
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/label_status_planning_to_read"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="20dp"
+                        android:text="@string/label_planning_to_read"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:layout_columnWeight="3"
+                        android:layout_rowWeight="1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/iv_view_more_planning"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:layout_rowWeight="1"
+                        android:paddingEnd="20dp"
+                        android:visibility="invisible"
+                        android:src="@drawable/ic_arrow_right" />
+                </GridLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list_book_planning"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="@string/label_planning_to_read"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:orientation="horizontal"
 
-                <ImageView
-                    android:id="@+id/iv_view_more_planning"
-                    android:paddingEnd="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_gravity="end"
-                    />
-            </GridLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_list_book_planning"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_book" />
-
-            <TextView
-                android:id="@+id/label_error_planning_to_read"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="20dp"
-                android:text="@string/label_book_list_empty"
-                android:visibility="gone" />
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_book" />
 
                 <TextView
-                    android:id="@+id/label_status_reading"
+                    android:id="@+id/label_error_planning_to_read"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="@string/label_reading"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_gravity="center_horizontal"
+                    android:paddingTop="20dp"
+                    android:text="@string/label_book_list_empty"
+                    android:visibility="gone" />
 
-                <ImageView
-                    android:id="@+id/iv_view_more_reading"
-                    android:paddingEnd="20dp"
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/label_status_reading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="20dp"
+                        android:text="@string/label_reading"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="3"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/iv_view_more_reading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:layout_rowWeight="1"
+                        android:paddingEnd="20dp"
+                        android:visibility="invisible"
+                        android:src="@drawable/ic_arrow_right" />
+                </GridLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list_book_reading"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_gravity="end"
-                    />
-            </GridLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_list_book_reading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/label_status_reading"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_book" />
-
-            <TextView
-                android:id="@+id/label_error_reading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="20dp"
-                android:text="@string/label_book_list_empty"
-                android:visibility="gone" />
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/label_status_reading"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_book" />
 
                 <TextView
-                    android:id="@+id/label_status_concluded"
+                    android:id="@+id/label_error_reading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="@string/label_concluded"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_gravity="center_horizontal"
+                    android:paddingTop="20dp"
+                    android:text="@string/label_book_list_empty"
+                    android:visibility="gone" />
 
-                <ImageView
-                    android:id="@+id/iv_view_more_concluded"
-                    android:paddingEnd="20dp"
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/label_status_concluded"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="20dp"
+                        android:text="@string/label_concluded"
+                        android:textSize="20sp"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="3"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/iv_view_more_concluded"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:paddingEnd="20dp"
+                        android:layout_rowWeight="1"
+                        android:visibility="invisible"
+                        android:src="@drawable/ic_arrow_right" />
+                </GridLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list_book_concluded"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_gravity="end"
-                    />
-            </GridLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_list_book_concluded"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/label_status_reading"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_book" />
-
-            <TextView
-                android:id="@+id/label_error_concluded"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="20dp"
-                android:text="@string/label_book_list_empty"
-                android:visibility="gone" />
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/label_status_reading"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_book" />
 
                 <TextView
-                    android:id="@+id/label_status_dropped"
+                    android:id="@+id/label_error_concluded"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="@string/label_dropped"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_gravity="center_horizontal"
+                    android:paddingTop="20dp"
+                    android:text="@string/label_book_list_empty"
+                    android:visibility="gone" />
 
-                <ImageView
-                    android:id="@+id/iv_view_more_dropped"
-                    android:paddingEnd="20dp"
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/label_status_dropped"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="20dp"
+                        android:text="@string/label_dropped"
+                        android:textSize="20sp"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="3"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/iv_view_more_dropped"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:layout_rowWeight="1"
+                        android:visibility="invisible"
+                        android:paddingEnd="20dp"
+                        android:src="@drawable/ic_arrow_right" />
+                </GridLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list_book_dropped"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_gravity="end"
-                    />
-            </GridLayout>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/label_status_reading"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_book" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_list_book_dropped"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/label_status_reading"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_book" />
+                <TextView
+                    android:id="@+id/label_error_dropped"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingTop="20dp"
+                    android:text="@string/label_book_list_empty"
+                    android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/label_error_dropped"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="20dp"
-                android:text="@string/label_book_list_empty"
-                android:visibility="gone" />
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/pg_loading"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/label_loading_book_list"
+                    android:indeterminate="true"
+                    android:visibility="visible" />
+            </LinearLayout>
+        </ScrollView>
 
-            <com.google.android.material.progressindicator.CircularProgressIndicator
-                android:id="@+id/pg_loading"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@string/label_loading_book_list"
-                android:indeterminate="true"
-                android:visibility="visible" />
-        </LinearLayout>
-    </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_book"
