--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.book.gridList.BookListActivity">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/pg_loading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:trackColor="?attr/readablePrimaryColor"
+        android:indeterminate="true"
+        android:visibility="visible"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:padding="20dp"
         android:id="@+id/rv_list_book"
