--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -22,6 +22,7 @@
         <item name="colorPrimary">#492376</item>
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="readablePrimaryColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -36,6 +37,7 @@
         <item name="colorPrimary">@color/gd_blue_purple_1</item>
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="readablePrimaryColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
