--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/white_blue</item>
         <item name="colorPrimaryVariant">#007AB3</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="readablePrimaryColor">@color/white_blue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/splash_screen_dark_purple</item>
@@ -40,6 +41,7 @@
         <item name="colorPrimary">#492376</item>
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="readablePrimaryColor">@color/white_blue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -54,6 +56,7 @@
         <item name="colorPrimary">@color/gd_blue_purple_1</item>
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="readablePrimaryColor">@color/white_blue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
