Add SearchView on BookListActivity.kt toolbar

--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -22,8 +22,8 @@
         android:id="@+id/rv_list_book"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_book"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        tools:listitem="@layout/item_book_binding_full_length"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:spanCount="2"
         />
 
