Fix SearchListContent.kt on BookListActivity.kt, fix layout problems on BookInfoActivity.kt, fix EditBookActivity.kt when a book doesn't have an thumbnail(image)

--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -45,123 +45,154 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:trackColor="@color/splash_screen_dark_purple" />
 
-            <FrameLayout
-                android:id="@+id/fl_book_image"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_top"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintEnd_toStartOf="@id/tv_book_title"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/progress_sending">
 
-                <ImageView
-                    android:id="@+id/iv_book_preview"
-                    android:layout_width="160dp"
+                <FrameLayout
+                    android:id="@+id/fl_book_image"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:contentDescription="@string/label_book_image"
-                    android:minHeight="240dp"
-                    android:src="@drawable/ic_item_book" />
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="30dp"
+                    app:layout_constraintEnd_toStartOf="@id/tv_book_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:id="@+id/iv_btn_edit_image"
-                    android:layout_width="40dp"
-                    android:layout_gravity="bottom|end"
-                    android:layout_height="40dp"
-                    android:padding="8dp"
-                    android:contentDescription="@string/label_book_image"
+                    <ImageView
+                        android:id="@+id/iv_book_preview"
+                        android:layout_width="160dp"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/label_book_image"
+                        android:minHeight="240dp"
+                        android:src="@drawable/ic_item_book" />
 
-                    android:background="@color/gd_blue_purple_1"
-                    android:src="@drawable/ic_pen_edit" />
+                    <ImageView
+                        android:id="@+id/iv_btn_edit_image"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="bottom|end"
+                        android:background="@color/gd_blue_purple_1"
+                        android:contentDescription="@string/label_book_image"
 
-                <ImageView
-                    android:id="@+id/iv_btn_save_image"
-                    android:layout_width="40dp"
-                    android:layout_gravity="bottom|end"
-                    android:layout_height="40dp"
-                    android:padding="8dp"
-                    android:visibility="gone"
-                    android:layout_marginEnd="50dp"
-                    android:contentDescription="@string/label_book_image"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_pen_edit" />
 
-                    android:background="@color/gd_blue_yellow_3"
-                    android:src="@drawable/ic_save" />
-            </FrameLayout>
+                    <ImageView
+                        android:id="@+id/iv_btn_save_image"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="bottom|end"
+                        android:layout_marginEnd="50dp"
+                        android:background="@color/gd_blue_yellow_3"
+                        android:contentDescription="@string/label_book_image"
+                        android:padding="8dp"
 
-            <TextView
-                android:id="@+id/tv_book_title"
-                android:layout_width="0dp"
+                        android:src="@drawable/ic_save"
+                        android:visibility="gone" />
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/tv_book_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="12dp"
+                    android:text="@string/label_loading_three_dots"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/fl_book_image"
+                    app:layout_constraintTop_toTopOf="@id/fl_book_image" />
+
+                <TextView
+                    android:id="@+id/tv_label_author"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="12dp"
+                    android:text="@string/label_author"
+                    android:textColor="@color/gd_blue_purple_3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/tv_book_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_book_title" />
+
+                <TextView
+                    android:id="@+id/tv_author"
+                    android:layout_width="0dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/label_loading_three_dots"
+                    android:textColor="@color/gd_blue_purple_3"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/tv_label_author"
+                    app:layout_constraintTop_toBottomOf="@id/tv_label_author" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_btn_edit_book"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
-                android:text="@string/label_loading_three_dots"
-                android:textAlignment="textStart"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/fl_book_image"
-                app:layout_constraintTop_toTopOf="@id/fl_book_image" />
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
+                android:gravity="start"
+                app:layout_constraintTop_toBottomOf="@id/cl_top">
 
-            <TextView
-                android:id="@+id/tv_label_author"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/label_author"
-                android:textColor="@color/gd_blue_purple_3"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/tv_book_title"
-                app:layout_constraintTop_toBottomOf="@id/tv_book_title" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_author"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/label_loading_three_dots"
-                android:textColor="@color/gd_blue_purple_3"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/tv_label_author"
-                app:layout_constraintTop_toBottomOf="@id/tv_label_author" />
+                    <Button
+                        android:id="@+id/btn_edit_book"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="16dp"
+                        android:backgroundTint="@color/gd_blue_purple_1"
+                        android:paddingHorizontal="25dp"
+                        android:text="@string/label_edit_book" />
 
-            <Button
-                android:id="@+id/btn_edit_book"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:backgroundTint="@color/gd_blue_purple_1"
-                android:text="@string/label_edit_book"
-                app:layout_constraintEnd_toEndOf="@id/fl_book_image"
-                app:layout_constraintStart_toStartOf="@id/fl_book_image"
-                app:layout_constraintTop_toBottomOf="@id/fl_book_image" />
+                    <Button
+                        android:id="@+id/btn_delete_book"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:backgroundTint="@android:color/holo_red_light"
+                        android:text="@string/label_delete"
+                        app:layout_constraintEnd_toEndOf="@id/fl_book_image"
+                        app:layout_constraintStart_toStartOf="@id/fl_book_image"
+                        app:layout_constraintTop_toBottomOf="@id/btn_edit_book" />
+                </LinearLayout>
 
-            <Button
-                android:id="@+id/btn_delete_book"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="32dp"
-                android:backgroundTint="@android:color/holo_red_light"
-                android:text="@string/label_delete"
-                app:layout_constraintEnd_toEndOf="@id/fl_book_image"
-                app:layout_constraintStart_toStartOf="@id/fl_book_image"
-                app:layout_constraintTop_toBottomOf="@id/btn_edit_book" />
 
-            <Spinner
-                android:id="@+id/spinner_reading_status"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:entries="@array/spinner_book_reading_status_value"
-                app:layout_constraintBottom_toBottomOf="@id/btn_edit_book"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_edit_book"
-                app:layout_constraintTop_toTopOf="@id/btn_edit_book"
-                tools:listitem="@android:layout/simple_spinner_dropdown_item" />
+                <Spinner
+                    android:layout_weight="0.95"
+                    android:id="@+id/spinner_reading_status"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginHorizontal="25dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/spinner_book_reading_status_value"
+                    app:layout_constraintBottom_toBottomOf="@id/btn_edit_book"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/btn_edit_book"
+                    app:layout_constraintTop_toTopOf="@id/tv_author"
+                    tools:listitem="@android:layout/simple_spinner_dropdown_item" />
+
+            </LinearLayout>
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/divider_purple_to_white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="56dp"
-                app:layout_constraintTop_toBottomOf="@id/btn_edit_book" />
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/ll_btn_edit_book" />
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -170,7 +201,9 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/bg_add_book_offline"
                 android:minHeight="500sp"
-                android:padding="16dp"
+                android:paddingHorizontal="16dp"
+                android:paddingTop="16dp"
+                android:paddingBottom="120dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider_purple_to_white"
                 app:layout_constraintVertical_bias="1.0"
